<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.piumi.disaster_management.Register"
    android:background="@drawable/register_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:paddingTop="@dimen/activity_vertical_margin">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/firstname"
        android:hint="@string/firstname"
        android:inputType="text"
        android:maxLines="1"
        android:padding="@dimen/_12sdp"
        android:background="@drawable/reg_text_background"
        android:textColor="@color/colorBlack"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_8sdp"
        android:singleLine="true"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lastname"
        android:hint="@string/lastname"
        android:inputType="text"
        android:layout_below="@+id/firstname"
        android:maxLines="1"
        android:padding="@dimen/_12sdp"
        android:background="@drawable/reg_text_background"
        android:textColor="@color/colorBlack"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_8sdp"
        android:singleLine="true"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:padding="@dimen/_12sdp"
        android:background="@drawable/reg_text_background"
        android:textColor="@color/colorBlack"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_8sdp"
        android:singleLine="true"
        android:layout_below="@+id/lastname"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="@dimen/_12sdp"
        android:background="@drawable/reg_text_background"
        android:textColor="@color/colorBlack"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_8sdp"
        android:singleLine="true"
        android:layout_below="@+id/email"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/confirm_password"
        android:hint="@string/confirmpassword_hint"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="@dimen/_12sdp"
        android:background="@drawable/reg_text_background"
        android:textColor="@color/colorBlack"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_8sdp"
        android:singleLine="true"
        android:layout_below="@+id/password"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_btn"
        android:layout_below="@+id/confirm_password"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorWhite"
        android:padding="@dimen/fab_margin"
        android:textStyle="bold"
        android:text="@string/register"
        android:layout_marginTop="@dimen/fab_margin"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cancel_btn"
        android:layout_below="@+id/register_btn"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorWhite"
        android:padding="@dimen/fab_margin"
        android:textStyle="bold"
        android:text="@string/cancel"
        android:layout_marginTop="@dimen/fab_margin"
        android:backgroundTint="#876868"/>


</RelativeLayout>
