<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.piumi.disaster_management.account.AccountSettings"
    android:background="@drawable/new_login_gradients"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    >



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/accountsettings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@android:color/transparent"
                    android:text="@string/account"
                    android:textColor="#000"
                    android:textStyle="bold"
                    />
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <ImageButton
                        android:id="@+id/btnLogin"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_gravity="start"
                        android:textAlignment="textStart"
                        android:src="@drawable/ic_keyboard_arrow_right_blue_900_24dp"
                        android:scaleType="fitEnd"
                        android:contentDescription="@string/todo"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:text="@string/loginregiater"
                        android:layout_marginTop="12dp"
                        android:layout_marginLeft="5dp"
                        android:textColor="#37043b"
                        android:layout_marginStart="5dp"/>
                </FrameLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:background="@android:color/transparent"
                    android:text="@string/subscription"
                    android:textColor="#000"
                    android:textStyle="bold"
                    />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Switch
                        android:id="@+id/switch1"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:text="@string/alert"
                        android:textColor="#37043b"
                        android:layout_gravity="start"
                        android:textAlignment="textStart"
                        android:background="#d4d2d4"

                        />


                </FrameLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:background="@android:color/transparent"
                    android:text="@string/preference"
                    android:textColor="#000"
                    android:textStyle="bold"
                    />
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Switch
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:text="@string/pushnotification"
                        android:background="#d4d2d4"
                        android:textColor="#37043b"
                       />


                </FrameLayout>
                <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <Switch
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:text="@string/starttip"
                    android:background="#d4d2d4"
                    android:textColor="#37043b"
                    />


            </FrameLayout>


            </LinearLayout>





</RelativeLayout>
