<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.piumi.disaster_management.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/new_login_gradients"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ScrollView
            android:layout_width="348dp"
            android:layout_height="541dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="236dp"
                    android:layout_height="117dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="4dp"
                    android:padding="1dp"
                    android:src="@drawable/logonew" />


                <EditText
                    android:id="@+id/txt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="70dp"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/ic_account_box_white_24dp"
                    android:drawablePadding="12dp"
                    android:ems="10"
                    android:hint="@string/username"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColorHint="#fff" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#f9d7db" />

                <EditText
                    android:id="@+id/txt_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/ic_lock_white_24dp"
                    android:ems="10"
                    android:hint="@string/pwdhint"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColorHint="#fff" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#93e9d6" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="8dp"
                    android:text="@string/remember_me"
                    android:textColor="#fff" />

                <Button
                    style="@style/Base.TextAppearance.AppCompat.Body2"
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/background_login"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="16dp"
                    android:text="@string/login"
                    android:textAllCaps="true"
                    android:textColor="#18e4da" />

                <Button
                    style="@style/Base.TextAppearance.AppCompat.Body2"
                    android:id="@+id/btn_forgotPwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/background_signup"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="16dp"
                    android:text="@string/forgotpwd"
                    android:textColor="#fff" />
                <Button
                    android:id="@+id/btn_createAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_account"
                    android:layout_marginLeft="90dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="@android:color/transparent"/>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
